--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <title>Rome Admin Portal</title>
+    <title>Community Shield Services</title>
     <script src="https://kit.fontawesome.com/a9803c7b03.js" crossorigin="anonymous"></script>
   </head>
   <body>
